Fixed background being cut off halfway

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ body::after {
   pointer-events: none;
   z-index: 0;
   background-image: url("IMAGES/CITYSCAPEBG.png");
-  background-size: 100% 65%; 
+  background-size: 100% auto;
   background-position: bottom center;
   background-repeat: no-repeat;
   opacity: 0.18;
